Tried fixing layout issues on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -26,12 +26,13 @@ html.dark {
 
 body {
   font-family: "Ubuntu", sans-serif;
-  margin: 0;
+  margin: auto 0;
   display: flex;
   align-items: center;
   justify-content: center;
+
   height: 100vh;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 .user-form {
   width: 100%;
@@ -279,4 +280,14 @@ body {
   text-decoration: none;
   color: var(--primary);
   opacity: 0.7;
+}
+
+@media (orientation: portrait) {
+  .weather-data {
+    margin-bottom: 0.5rem;
+  }
+  .clock {
+    width: 16rem;
+    height: 16rem;
+  }
 }
